# libmatrix-client

./: .coafile  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt  test.cpp
.github/.workflows/: build.yml
.github/workflows/: build.yml  lint.yml  test.yml
.linter/: requirements.txt
include/libmatrix-client/: CPPRESTSDKClient.h  CPPRESTSDKSession.h  CustomHTTPClient.h  CustomHTTPSession.h  DLL.h  Device.h  Exceptions.h  HTTP.h  HTTPClient.h  HTTPSession.h  MatrixSession.h  MessageUtils.h  Messages.h  Room.h  User.h  UserUtils.h  Users.h  typedefs.h
include/libmatrix-client/Encryption/: Account.h  EncryptionUtils.h  IdentityKeys.h  MegOlmSession.h  OneTimeKey.h
src/: CPPRESTSDKClient.cpp  CPPRESTSDKSession.cpp  CustomHTTPClient.cpp  HTTP.cpp  MatrixSession.cpp  MatrixSessionEncryption.cpp  Room.cpp
src/encryption/: Account.cpp  MegOlmSession.cpp
src/utils/: EncryptionUtils.cpp  MessageUtils.cpp  UserUtils.cpp
tests/: CMakeLists.txt  HTTPTests.cpp  conanfile.txt
